import java.util.Optional;

public class Artist extends Card implements Charachter {

    //............

public Artist(int id, int era, Optional<Integer> numPlayers, boolean isEvent) {

    super(id, era, numPlayers, isEvent);

}

}
