package org.example.model;

public enum Building_Effect {
    FOOD_COMPLETE_SET,
    SUSTENANCE_DISCOUNT,
    RITUAL_IMMUNITY,
    TOTEM_FOOD_BONUS,
    COUPLE_INVENTOR,
    RITUAL_STARS_BONUS,
    RITUAL_DOUBLE_PP,
    HUNT_BONUS,
    END_BUILDER_MULTIPLIER,
    PAINTING_FOOD_BONUS,
    END_PP_COMPLETE_SET,
    END_HUNTER_MULTIPLIER,
    END_PP_BONUS,
    BONUS_SELECTION,
}
