package org.example.model;

import java.util.Optional;
import java.util.Set;

public class SinceBuilt extends Building {

//attributes

public SinceBuilt (int endGamePP, int cost, Trigger trigger,
                        Set<Character> characterUse, int era, Optional<Integer> numPlayers) {


    super(endGamePP, cost, trigger, characterUse, era, numPlayers);

    //this...

    }


}
