@startuml server-model-cards
title Server — Model: Cards (Characters, Events, Buildings) — org.adsl.server.model.cards

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "server.model.cards" {

  abstract class Card <<Serializable>> {
    -id: String
    -era: int
    -numPlayers: Integer
    +Card(id: String, era: int, numPlayers: Integer)
    {abstract} +canBeDrawn(p: Player): boolean
    {abstract} +insert(cards: Map<CardType, Set<Card>>): void
    {abstract} +activeEffect(players: Set<Player>, t: Trigger): void
    #eraToRoman(era: int): String
    {abstract} #getTypeLabel(): String
    {abstract} #getEffectsLabel(): String
    #getCostLabel(): String
    +createDTO(): CardDTO
    +getId(): String
    +getEra(): int
    +getNumPlayers(): Optional<Integer>
  }
}

package "server.model.cards.characters" {

  abstract class Character {
    +Character(id: String, era: int, numPlayers: Integer)
    +canBeDrawn(p: Player): boolean
    +activeEffect(players: Set<Player>, t: Trigger): void
  }

  class Hunter {
    -extraFood: boolean
    +Hunter(id: String, extraFood: boolean, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    +activeEffect(players: Set<Player>, t: Trigger): void
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class Gatherer {
    -discount: int
    +Gatherer(id: String, discount: int, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    +getDiscount(): int
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class Builder {
    -discount: int
    -pp: int
    +Builder(id: String, discount: int, pp: int, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    +getDiscount(): int
    +getPP(): int
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class Shaman {
    -starNum: int
    +Shaman(id: String, starNum: int, era: int, numPlayers: Integer)
    +getStarNum(): int
    +insert(cards: Map<CardType, Set<Card>>): void
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class Artist {
    +Artist(id: String, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class Inventor {
    -icon: Icon
    +Inventor(id: String, icon: Icon, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    +getIcon(): Icon
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }
}

package "server.model.cards.events" {

  abstract class Event {
    -isFinal: boolean
    +Event(id: String, isFinal: boolean, era: int, numPlayers: Integer)
    +canBeDrawn(p: Player): boolean
    {abstract} +getEventTitle(): String
    +activateBuildings(p: Player, t: Trigger): void
  }

  class Hunt {
    -multiplierPP: int
    +Hunt(id: String, multiplierPP: int, isFinal: boolean, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    +activeEffect(players: Set<Player>, t: Trigger): void
    +getEventTitle(): String
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class Sustenance {
    -lostPP: int
    +Sustenance(id: String, lostPP: int, isFinal: boolean, era: int, numPlayers: Integer)
    +getLostPP(): int
    +insert(cards: Map<CardType, Set<Card>>): void
    +activeEffect(players: Set<Player>, t: Trigger): void
    +getEventTitle(): String
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class CavePaintings {
    -minArtists: int
    -lostPP: int
    -multiplierPP: int
    +CavePaintings(id: String, minArtists: int, lostPP: int, multiplierPP: int, isFinal: boolean, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    +activeEffect(players: Set<Player>, t: Trigger): void
    +getEventTitle(): String
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }

  class ShamanicRitual {
    -lostPP: int
    -gainedPP: int
    +ShamanicRitual(id: String, lostPP: int, gainedPP: int, isFinal: boolean, era: int, numPlayers: Integer)
    +insert(cards: Map<CardType, Set<Card>>): void
    +activeEffect(players: Set<Player>, t: Trigger): void
    +getEventTitle(): String
    #getTypeLabel(): String
    #getEffectsLabel(): String
  }
}

package "server.model.cards.buildings" {

  abstract class Building {
    -endGamePP: int
    -cost: int
    +Building(id: String, endGamePP: int, cost: int, era: int, numPlayers: Integer)
    +canBeDrawn(p: Player): boolean
    +insert(cards: Map<CardType, Set<Card>>): void
    +getCost(): int
    #getCostLabel(): String
    +getEndGamePP(): int
    #getTypeLabel(): String
  }

  class EndGame {
    -buildingEffect: BuildingEffect
    -characterTypeMultiplier: CardType
    +EndGame(id, endGamePP, cost, era, numPlayers, buildingEffect, characterTypeForMultiplier)
    +activeEffect(players: Set<Player>, t: Trigger): void
    #getEffectsLabel(): String
  }

  class ExtraMove {
    +ExtraMove(id, endGamePP, cost, trigger, characterUse, era, numPlayers)
    +activeEffect(players: Set<Player>, t: Trigger): void
    #getEffectsLabel(): String
  }

  class BonusTotem {
    +BonusTotem(id, endGamePP, cost, era, numPlayers)
    +activeEffect(players: Set<Player>, t: Trigger): void
    #getEffectsLabel(): String
  }

  class SinceBuilt {
    -buildingEffect: BuildingEffect
    -characterInUse: Map<CardType, Set<Card>>
    +SinceBuilt(id, endGamePP, cost, trigger, era, numPlayers, buildingEffect)
    +SinceBuilt(id, endGamePP, cost, trigger, characterInUse, era, numPlayers, buildingEffect)
    +activeEffect(players: Set<Player>, t: Trigger): void
    #getEffectsLabel(): String
  }

  package "server.model.cards.buildings.forEvent" {
    abstract class DuringEvent {
      -eventTriggers: Set<Trigger>
      +DuringEvent(id, endGamePP, cost, era, numPlayers)
      +activeEffect(players: Set<Player>, t: Trigger): void
      {abstract} +execute(players: Set<Player>, t: Trigger): void
    }

    class DuringHunt {
      +DuringHunt(id, endGamePP, cost, era, numPlayers)
      +execute(players: Set<Player>, t: Trigger): void
      #getEffectsLabel(): String
    }

    class DuringPaintings {
      +DuringPaintings(id, endGamePP, cost, era, numPlayers)
      +execute(players: Set<Player>, t: Trigger): void
      #getEffectsLabel(): String
    }

    class DuringRitual {
      -buildingEffect: BuildingEffect
      +DuringRitual(id, endGamePP, cost, era, numPlayers, buildingEffect)
      +execute(players: Set<Player>, t: Trigger): void
      #getEffectsLabel(): String
    }

    class DuringSustenance {
      -typeMultiplier: CardType
      +DuringSustenance(id, endGamePP, cost, era, numPlayers, typeMultiplier)
      +execute(players: Set<Player>, t: Trigger): void
      +getTypeMultiplier(): CardType
      #getEffectsLabel(): String
    }
  }

  package "server.model.cards.buildings.utils" {
    class BuildingBonus {
      -extraStars: int
      -shamanMulitiplierPP: int
      -builderMultiplierPP: int
      -sustenanceDiscount: int
      -huntEventBonus: boolean
      -extraMove: boolean
      -noRitualLostPP: boolean
      -artistFood: boolean
      -bonusFoodTile: boolean
      -doubleRitualPP: boolean
      +BuildingBonus()
      +reset(): void
      +isBonusFoodTile(): boolean
      +setBonusFoodTile(b: boolean): void
      +getExtraStars(): int
      +setExtraStars(extraStars: int): void
      +getShamanMulitiplierPP(): int
      +setShamanMulitiplierPP(v: int): void
      +getBuilderMultiplierPP(): int
      +setBuilderMultiplierPP(v: int): void
      +getSustenanceDiscount(): int
      +setSustenanceDiscount(v: int): void
      +isHuntEventBonus(): boolean
      +setHuntEventBonus(b: boolean): void
      +isExtraMove(): boolean
      +setExtraMove(b: boolean): void
      +isNoRitualLostPP(): boolean
      +setNoRitualLostPP(b: boolean): void
      +isArtistFood(): boolean
      +setArtistFood(b: boolean): void
      +isDoubleRitualPP(): boolean
      +setDoubleRitualPP(b: boolean): void
    }

    enum BuildingEffect {
      FOOD_COMPLETE_SET
      COUPLE_INVENTOR
      RITUAL_IMMUNITY
      RITUAL_STARS_BONUS
      RITUAL_DOUBLE_PP
      END_BUILDER_MULTIPLIER
      PP_COMPLETE_SET
      END_CHARACTER_MULTIPLIER
      END_PP_BONUS
    }
  }
}

Character -up-|> Card
Event -up-|> Card
Building -up-|> Card

Hunter -up-|> Character
Gatherer -up-|> Character
Builder -up-|> Character
Shaman -up-|> Character
Artist -up-|> Character
Inventor -up-|> Character

Hunt -up-|> Event
Sustenance -up-|> Event
CavePaintings -up-|> Event
ShamanicRitual -up-|> Event

EndGame -up-|> Building
ExtraMove -up-|> Building
BonusTotem -up-|> Building
SinceBuilt -up-|> Building
DuringEvent -up-|> Building
DuringHunt -up-|> DuringEvent
DuringPaintings -up-|> DuringEvent
DuringRitual -up-|> DuringEvent
DuringSustenance -up-|> DuringEvent

EndGame ..> BuildingEffect
SinceBuilt ..> BuildingEffect
DuringRitual ..> BuildingEffect

Card ..> "shared.model.CardDTO" : createDTO

note bottom of Card
  activeEffect dispatched on Trigger:
   DRAWING        → Hunter, SinceBuilt
   END_TURN       → BonusTotem
   END_ROUND      → ExtraMove
   END_GAME       → EndGame
   EVENT_EXECUTION → Event subtypes
   HUNT/PAINTINGS/SUSTENANCE/RITUAL → DuringEvent subtypes (via filter in DuringEvent)
  insert() routes card to the right CardType bucket
  in the player hand or events map.
end note

note right of BuildingBonus
  Transient per-player accumulator.
  Buildings set fields during their trigger;
  events/states consume them then reset().
end note

@enduml
